# ticket-classifier

./: .env.example  README.md  main.py  notebook.ipynb  pyproject.toml  streamlit_app.py
classifier/: artifacts.py  classifiers.py  conclusion.py  config.py  data.py  features.py  graph.py  justifiers.py  llm.py  logging_config.py  metrics.py  prompts.py  rag.py  runner.py  schemas.py  ui.py
notebooks/: analise.ipynb  analysis.ipynb  classificators.ipynb  main.ipynb
