[project]
name = "ticket-classifier"
version = "0.1.0"
description = "IT Service Ticket Classification with justification generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["classifier"]

[tool.hatch.build.targets.wheel]
packages = ["classifier"]
